--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
   </head>
   <body>
     <section class="page-header">
@@ -55,7 +56,13 @@ $ git checkout gh-pages
 
     </section>
 
-  
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Find a place to stay.</h1>
+        <p>Rent from people in over 34,000 cities and 192 countries.</p>
+        <a href="#">Learn More</a>
+      </div>
+    </div> 
   </body>
 </html>
 
