--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
   </head>
   <body>
+    <div class="nav">
+      <div class="container">
+        <ul class="pull-left">
+          <li><a href="#">Name</a></li>
+          <li><a href="#">Browse</a></li>
+        </ul>
+        <ul class="pull-right">
+          <li><a href="#">Sign Up</a></li>
+          <li><a href="#">Log In</a></li>
+          <li><a href="#">Help</a></li>
+        </ul>
+      </div>
+    </div>
     <section class="page-header">
       <h1 class="project-name">Bizzbyster.GitHub.io</h1>
       <h2 class="project-tagline">Playing around with github pages</h2>
@@ -55,14 +68,6 @@ $ git checkout gh-pages
       </footer>
 
     </section>
-
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Find a place to stay.</h1>
-        <p>Rent from people in over 34,000 cities and 192 countries.</p>
-        <a href="#">Learn More</a>
-      </div>
-    </div> 
   </body>
 </html>
 
