--- a/dynamic_url.html
+++ b/dynamic_url.html
@@ -3,6 +3,8 @@
   <body>
 <h1>Page to test dynamic URL</h1>
     <script type="text/javascript">
+    var delay=5000; //5 seconds
+    setTimeout(function(){}, delay); 
       myimage = new Image();
       myimage.src = 'https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png?rnd=' + Math.random();
     </script>
