--- a/dynamic_url.html
+++ b/dynamic_url.html
@@ -3,8 +3,15 @@
   <body>
 <h1>Page to test dynamic URL</h1>
     <script type="text/javascript">
-    var delay=5000; //5 seconds
-    setTimeout(function(){}, delay); 
+    function sleep(milliseconds) {
+      var start = new Date().getTime();
+      for (var i = 0; i < 1e7; i++) {
+        if ((new Date().getTime() - start) > milliseconds){
+          break;
+        }
+      }
+    }
+      sleep(5000)
       myimage = new Image();
       myimage.src = 'https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png?rnd=' + Math.random();
     </script>
