--- a/dynamic_url.html
+++ b/dynamic_url.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+  <head>
+    <title>Dynamic URL Test Page</title>
+  </head>
   <body>
 <h1>Page to test dynamic URL</h1>
     <script type="text/javascript">
