--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
 <!doctype html>
 <html>
   <body>
-<h1>Page to test dynamic URL</h1>
-    <script type="text/javascript">
-      myimage = new Image();
-      myimage.src = 'https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png?rnd=' + Math.random();
-    </script>
-    
+<h1>Page with one image object</h1>
+    <img src='https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png'>
   </body>
 </html>
