--- a/one_image.html
+++ b/one_image.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+  <head>
+  <title>Page with one image object</title>
+  </head>
   <body>
 <h1>Page with one image object</h1>
     <img src='https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png'>
