--- a/dynamic_url.html
+++ b/dynamic_url.html
@@ -22,6 +22,7 @@
       //window.setTimeout(getImage,1500);
       sleep(1500);
       getImage()
+      sleep(100);
       </script>
     
   </body>
