--- a/dynamic_url.html
+++ b/dynamic_url.html
@@ -19,10 +19,9 @@
           }
         }
       }
-      //window.setTimeout(getImage,1500);
-      sleep(1000);
-      getImage()
-      sleep(500);
+      sleep(1500);
+      document.write("<img src='https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png?rnd=" +
+      Math.random() + "'>");
       </script>
     
   </body>
