--- a/nav_timing.html
+++ b/nav_timing.html
@@ -6,5 +6,11 @@
   <body>
 <h1>Page with one image object</h1>
     <img src='https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png'>
+    window.onload = function(){
+  setTimeout(function(){
+    var t = performance.timing;
+    alert(t.loadEventStart);
+  }, 0);
+}
   </body>
 </html>
