--- a/nav_timing.html
+++ b/nav_timing.html
@@ -4,7 +4,7 @@
   <title>Nav Timing Test Page</title>
   </head>
   <body>
-<h1>Page with one image object</h1>
+<h1>Nav Timing Test Page</h1>
     <img src='https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png'>
     <script>
       window.onload = function(){
