--- a/dns_hint_test.html
+++ b/dns_hint_test.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+  <title>DNS Test Page</title>
   <body>
 <h1>Page with 4 images from 4 different hosts</h1>
 <img src='https://upload.wikimedia.org/wikipedia/en/thumb/6/67/Chicago_Bulls_logo.svg/1014px-Chicago_Bulls_logo.svg.png'\>
