--- a/main_resource_test.html
+++ b/main_resource_test.html
@@ -2,6 +2,6 @@
 <html>
 <title>Page with a single "main resource" subresource</title>
   <body>
-<iframe src="mainresource.html"></iframe>
+<iframe src="http://bizzbyster.github.io/mainresource.html"></iframe>
   </body>
 </html>
