--- a/happybirthdaygrandpa.html
+++ b/happybirthdaygrandpa.html
@@ -2,8 +2,8 @@
 <html>
   <title>Happy Birthday Grandpa!!!</title>
   <body>
-  	<video width="320" height="240" controls>
-  		<source src="videos/PeteAndTess.mp4" type="video/mp4">
+  	<video width="320" height="240">
+  		<source src="http://bizzbyster.github.io/videos/PeteAndTess.mp4" type="video/mp4">
 	</video>
   </body>
 </html>
