--- a/happybirthdaygrandpa.html
+++ b/happybirthdaygrandpa.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
+<head>
   <title>Happy Birthday Grandpa!!!</title>
+</head>
   <body>
-  	<video width="320" height="240">
+  	<video width="320" height="240" controls>
   		<source src="http://bizzbyster.github.io/videos/PeteAndTess.mp4" type="video/mp4">
 	</video>
   </body>
