--- a/happybirthdaygrandpa.html
+++ b/happybirthdaygrandpa.html
@@ -4,8 +4,11 @@
   <title>Happy Birthday Grandpa!!!</title>
 </head>
   <body>
-  	<video width="320" height="240" controls>
+  	<video width="480" height="600" controls>
   		<source src="http://bizzbyster.github.io/videos/PeteAndTess.mp4" type="video/mp4">
+	</video>
+	<video width="480" height="600" controls>
+  		<source src="http://bizzbyster.github.io/videos/ChadAndMarina.mp4" type="video/mp4">
 	</video>
   </body>
 </html>
