--- a/happybirthdaygrandpa.html
+++ b/happybirthdaygrandpa.html
@@ -4,10 +4,10 @@
   <title>Happy Birthday Grandpa!!!</title>
 </head>
   <body>
-  	<video width="480" height="600" controls>
+  	<video width="480" height="600" controls autoplay>
   		<source src="http://bizzbyster.github.io/videos/PeteAndTess.mp4" type="video/mp4">
 	</video>
-	<video width="480" height="600" controls>
+	<video width="480" height="600" controls autoplay>
   		<source src="http://bizzbyster.github.io/videos/ChadAndMarina.mp4" type="video/mp4">
 	</video>
   </body>
