--- a/happybirthdaygrandpa.html
+++ b/happybirthdaygrandpa.html
@@ -4,11 +4,22 @@
   <title>Happy Birthday Grandpa!!!</title>
 </head>
   <body>
-  	<video width="480" height="600" controls autoplay>
-  		<source src="http://bizzbyster.github.io/videos/PeteAndTess.mp4" type="video/mp4">
-	</video>
-	<video width="480" height="600" controls autoplay>
-  		<source src="http://bizzbyster.github.io/videos/ChadAndMarina.mp4" type="video/mp4">
-	</video>
+  	<table>
+  		<tr><td>
+			  	<video width="480" height="600" controls autoplay>
+			  		<source src="http://bizzbyster.github.io/videos/PeteAndTess.mp4" type="video/mp4">
+				</video>
+			</td><td>
+				<video width="480" height="600" controls autoplay>
+			  		<source src="http://bizzbyster.github.io/videos/ChadAndMarina.mp4" type="video/mp4">
+				</video>
+		</td></tr>
+		<tr><td>
+			  	<video width="480" height="600" controls autoplay>
+			  		<source src="http://bizzbyster.github.io/videos/MikeKelLukeSam.mp4" type="video/mp4">
+				</video>
+			</td><td>
+				Next video
+		</td></tr>
   </body>
 </html>
