--- a/happybirthdaygrandpa.html
+++ b/happybirthdaygrandpa.html
@@ -6,16 +6,16 @@
   <body>
   	<table>
   		<tr><td>
-			  	<video width="480" height="600" controls autoplay>
+			  	<video width="480" height="600" autoplay>
 			  		<source src="http://bizzbyster.github.io/videos/PeteAndTess.mp4" type="video/mp4">
 				</video>
 			</td><td>
-				<video width="480" height="600" controls autoplay>
+				<video width="480" height="600" autoplay>
 			  		<source src="http://bizzbyster.github.io/videos/ChadAndMarina.mp4" type="video/mp4">
 				</video>
 		</td></tr>
 		<tr><td>
-			  	<video width="480" height="600" controls autoplay>
+			  	<video width="480" height="600" autoplay>
 			  		<source src="http://bizzbyster.github.io/videos/MikeKelLukeSam.mp4" type="video/mp4">
 				</video>
 			</td><td>
