--- a/happybirthdaygrandpa.html
+++ b/happybirthdaygrandpa.html
@@ -6,17 +6,28 @@
   <body>
   	<table>
   		<tr><td>
-			  	<video width="400" height="220" autoplay>
+			  	<video width="400" height="220" autoplay controls>
 			  		<source src="http://bizzbyster.github.io/videos/PeteAndTess.mp4" type="video/mp4">
 				</video>
 			</td><td>
-				<video width="400" height="220" autoplay>
+				<video width="400" height="220" autoplay controls>
 			  		<source src="http://bizzbyster.github.io/videos/ChadAndMarina.mp4" type="video/mp4">
 				</video>
 			</td><td>
-			  	<video width="400" height="220" autoplay>
+			  	<video width="400" height="220" autoplay controls>
 			  		<source src="http://bizzbyster.github.io/videos/MikeKelLukeSam.mp4" type="video/mp4">
 				</video>
+			</td>
+		</tr>
+
+		<tr><td>
+			  	<video width="400" height="220" autoplay controls>
+			  		<source src="http://bizzbyster.github.io/videos/Dalyan.mp4" type="video/mp4">
+				</video>
+			</td><td>
+				yo
+			</td><td>
+			  	yo
 			</td>
 		</tr>
   </body>
