--- a/happybirthdaygrandpa.html
+++ b/happybirthdaygrandpa.html
@@ -25,9 +25,13 @@
 			  		<source src="http://bizzbyster.github.io/videos/Dalyan.mp4" type="video/mp4">
 				</video>
 			</td><td>
-				yo
+				<video width="400" height="220" autoplay controls>
+			  		<source src="http://bizzbyster.github.io/videos/OnaFlora.mp4" type="video/mp4">
+				</video>
 			</td><td>
-			  	yo
+			  	<video width="400" height="220" autoplay controls>
+			  		<source src="http://bizzbyster.github.io/videos/Kirk.mp4" type="video/mp4">
+				</video>
 			</td>
 		</tr>
   </body>
