--- a/happybirthdaygrandpa.html
+++ b/happybirthdaygrandpa.html
@@ -37,10 +37,12 @@
 
 		<tr><td>
 			  	<video width="400" height="220" autoplay controls>
-			  		<source src="http://bizzbyster.github.io/videos/Aaron.mp4" type="video/mp4">
+			  		<source src="http://bizzbyster.github.io/videos/MenciaAiva.mp4" type="video/mp4">
 				</video>
 			</td><td>
-				more
+				<video width="400" height="220" autoplay controls>
+			  		<source src="http://bizzbyster.github.io/videos/Aaron.mp4" type="video/mp4">
+				</video>
 			</td><td>
 			  	more
 			</td>
