--- a/happybirthdaygrandpa.html
+++ b/happybirthdaygrandpa.html
@@ -44,7 +44,9 @@
 			  		<source src="http://bizzbyster.github.io/videos/Aaron.mp4" type="video/mp4">
 				</video>
 			</td><td>
-			  	more
+			  	<video width="400" height="220" autoplay controls>
+			  		<source src="http://bizzbyster.github.io/videos/LouBrianBrynAria.mp4" type="video/mp4">
+				</video>
 			</td>
 		</tr>
   </body>
