--- a/happybirthdaygrandpa.html
+++ b/happybirthdaygrandpa.html
@@ -6,45 +6,45 @@
   <body>
   	<table>
   		<tr><td>
-			  	<video width="400" height="220" autoplay controls>
+			  	<video width="400" height="220" controls>
 			  		<source src="http://bizzbyster.github.io/videos/PeteAndTess.mp4" type="video/mp4">
 				</video>
 			</td><td>
-				<video width="400" height="220" autoplay controls>
+				<video width="400" height="220" controls>
 			  		<source src="http://bizzbyster.github.io/videos/ChadAndMarina.mp4" type="video/mp4">
 				</video>
 			</td><td>
-			  	<video width="400" height="220" autoplay controls>
+			  	<video width="400" height="220" controls>
 			  		<source src="http://bizzbyster.github.io/videos/OnaFlora.mp4" type="video/mp4">
 				</video>
 			</td>
 		</tr>
 
 		<tr><td>
-			  	<video width="400" height="220" autoplay controls>
+			  	<video width="400" height="220" controls>
 			  		<source src="http://bizzbyster.github.io/videos/Dalyan.mp4" type="video/mp4">
 				</video>
 			</td><td>
-				<video width="400" height="220" autoplay controls>
+				<video width="400" height="220" controls>
 			  		<source src="http://bizzbyster.github.io/videos/MikeKelLukeSam.mp4" type="video/mp4">
 				</video>
 			</td><td>
-			  	<video width="400" height="220" autoplay controls>
+			  	<video width="400" height="220" controls>
 			  		<source src="http://bizzbyster.github.io/videos/Kirk.mp4" type="video/mp4">
 				</video>
 			</td>
 		</tr>
 
 		<tr><td>
-			  	<video width="400" height="220" autoplay controls>
+			  	<video width="400" height="220" controls>
 			  		<source src="http://bizzbyster.github.io/videos/MenciaAiva.mp4" type="video/mp4">
 				</video>
 			</td><td>
-				<video width="400" height="220" autoplay controls>
+				<video width="400" height="220" controls>
 			  		<source src="http://bizzbyster.github.io/videos/Aaron.mp4" type="video/mp4">
 				</video>
 			</td><td>
-			  	<video width="400" height="220" autoplay controls>
+			  	<video width="400" height="220" controls>
 			  		<source src="http://bizzbyster.github.io/videos/LouBrianBrynAria.mp4" type="video/mp4">
 				</video>
 			</td>
