--- a/happybirthdaygrandpa.html
+++ b/happybirthdaygrandpa.html
@@ -7,7 +7,7 @@
   	<table>
   		<tr><td>
 			  	<video width="400" height="220" controls>
-			  		<source src="http://bizzbyster.github.io/videos/PeteAndTess.mp4" type="video/mp4">
+			  		<source src="http://bizzbyster.github.io/videos/Lara.mp4" type="video/mp4">
 				</video>
 			</td><td>
 				<video width="400" height="220" controls>
@@ -46,6 +46,12 @@
 			</td><td>
 			  	<video width="400" height="220" controls>
 			  		<source src="http://bizzbyster.github.io/videos/LouBrianBrynAria.mp4" type="video/mp4">
+				</video>
+			</td>
+		</tr>
+		<tr><td>
+			  	<video width="400" height="220" controls>
+			  		<source src="http://bizzbyster.github.io/videos/PeteAndTess.mp4" type="video/mp4">
 				</video>
 			</td>
 		</tr>
