--- a/happybirthdaygrandpa.html
+++ b/happybirthdaygrandpa.html
@@ -54,6 +54,12 @@
 			  		<source src="http://bizzbyster.github.io/videos/PeteAndTess.mp4" type="video/mp4">
 				</video>
 			</td>
+			<td>
+			  	<video width="400" height="220" controls>
+			  		<source src="http://bizzbyster.github.io/videos/Dave.mp4" type="video/mp4">
+				</video>
+			</td>
+			<td></td>
 		</tr>
   </body>
 </html>
