--- a/happybirthdaygrandpa.html
+++ b/happybirthdaygrandpa.html
@@ -56,6 +56,11 @@
 			</td>
 			<td>
 			  	<video width="400" height="220" controls>
+			  		<source src="http://bizzbyster.github.io/videos/Les.mp4" type="video/mp4">
+				</video>
+			</td>
+			<td>
+			  	<video width="400" height="220" controls>
 			  		<source src="http://bizzbyster.github.io/videos/Dave.mp4" type="video/mp4">
 				</video>
 			</td>
