--- a/https_sites.html
+++ b/https_sites.html
@@ -41,7 +41,7 @@ p {
  <p><a href="https://www.washingtonpost.com">https://www.washingtonpost.com</a></p>
   <p><a href="https://www.apple.com">https://www.apple.com</a></p>
  <p><a href="https://www.pinterest.com">https://www.pinterest.com</a></p>
- <p><a href="https://www.pinterest.com">https://www.usps.com</a></p>
+ <p><a href="https://www.usps.com">https://www.usps.com</a></p>
  </section>
     </article>
 
