--- a/multiple_files.html
+++ b/multiple_files.html
@@ -2,6 +2,6 @@
 <html>
   <body>
 <h1>Page with one object</h1>
-    <iframe src='https://www.dropbox.com/index.html'>
+    <img src='https://www.dropbox.com/'>
   </body>
 </html>
