--- a/mom_and_laurie.html
+++ b/mom_and_laurie.html
@@ -271,7 +271,7 @@ it.csrf_token = 'CAA5AE36C0EC44512764D0E2E65C49E9';
       <img class="print_type_image" alt="Car Rental" src="./mom_and_laurie_files/car_print.png">    </div>
     <div class="details">
       <div class="object_header">
-        <span class="trip_item_display_name">Pick-up Avis Car Rental</span>
+        <span class="trip_item_display_name">Pick-up Avis Car Rental (Pete will pickup)</span>
       </div>
       <div class="info_grouping"><div>Pick-Up: 11:30am</div><div><a href="https://www.tripit.com/trip/map?id=166173474&amp;trip_item_id=1726462017">Aeroporto Bari Palese, Bari, 70057 IT</a></div><div>080-5316168, Sun - Sat 7:30 AM - 11:30 PM</div><div>Confirmation # 27057824US3</div></div>      <div class="more_info" style="display: block;">
         <div id="more_info_1726462017" class="more_info_container" data-is-retrieved="1" data-is-expanded="1">
