--- a/mom_and_laurie.html
+++ b/mom_and_laurie.html
@@ -213,6 +213,7 @@ it.csrf_token = 'CAA5AE36C0EC44512764D0E2E65C49E9';
     <span class="body"><a data-date="4/16/2016" data-trip-id="166173474" href="https://www.tripit.com/trip/print/id/166173474#">Sat, Apr 16</a></span>
     <span class="tip"></span>
   </h2>
+  </div>
 </div>
 
 <div class="clr"></div>
