--- a/mom_and_laurie.html
+++ b/mom_and_laurie.html
@@ -475,31 +475,7 @@ it.csrf_token = 'CAA5AE36C0EC44512764D0E2E65C49E9';
 </div>
 <div class="clr"></div>
     </div><!-- end container -->
-  <script type="text/javascript">
-    //appendTag function
-    function appendTag(tagSource, scope, callBack) {
-        var script = document.createElement('script');
-        script.type = 'text/javascript';
-        script.async = 'true';
-        script.src = tagSource;
-            if(callBack) script.onload = callBack;
-        if(scope) scope.appendChild(script);
-        else document.getElementsByTagName('head')[0].appendChild(script);
-    };
-    //Tag Manager
-    function _loadTagManager(dataLayerVar, iD) {
-        window[dataLayerVar] = window[dataLayerVar] || [];
-        window[dataLayerVar].push({
-            'gtm.start': new Date().getTime(),
-            event: 'gtm.js'
-        });
-        var gtmScript = '//www.googletagmanager.com/gtm.js?id=' + iD +'&l='+ dataLayerVar;
-        appendTag(gtmScript);
-    }
-    //Call the Tag Management Script
-    if(!window.coreDataLayer) _loadTagManager('coreDataLayer', 'GTM-MD68P6');
-    //End Tag Manager
-</script><script type="text/javascript" src="./mom_and_laurie_files/jquery.js"></script>
+<script type="text/javascript" src="./mom_and_laurie_files/jquery.js"></script>
 <script type="text/javascript" src="./mom_and_laurie_files/jquery.encapsulatedPlugin.js"></script>
 <script type="text/javascript" src="./mom_and_laurie_files/tripit.js"></script>
 <script type="text/javascript" src="./mom_and_laurie_files/facebook.js"></script>
