--- a/viewport.html
+++ b/viewport.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
+<head>
+	<LINK href="stylesheets/github-dark.css" rel="stylesheet" type="text/css">
+	<LINK href="stylesheets/github-light.css" rel="stylesheet" type="text/css">
+	<LINK href="stylesheets/main.css" rel="stylesheet" type="text/css">
+	<LINK href="stylesheets/normalize.css" rel="stylesheet" type="text/css">
+	<LINK href="stylesheets/print.css" rel="stylesheet" type="text/css">
+	<LINK href="stylesheets/styles.css" rel="stylesheet" type="text/css">
+</head>
 <body>
-<div style="width: 100%">
-   <img style="width: 10px; height: 10px" src="large.jpg"/>
-</div>
-<div style="height: 99999px; width: 100%" id="view_div"></div>
-<div style="width: 100%">
-  <img style="width: 10px; height: 10px" src="large_out_of_viewport.jpg">
-</div>
-<script>
-document.body.offsetTop; // Force a layout.
-</script>
+	<div style="width: 100%">
+	   <img style="width: 100px; height: 100px" src="large.jpg"/>
+	</div>
+	<div style="height: 99999px; width: 100%" id="view_div"></div>
+	<div style="width: 100%">
+	  <img style="width: 100px; height: 100px" src="large_out_of_viewport.jpg">
+	</div>
+	<script>
+	document.body.offsetTop; // Force a layout.
+	</script>
 
-<script>
-document.body.offsetTop; // Force a layout.
-</script>
+	<script>
+	document.body.offsetTop; // Force a layout.
+	</script>
 </body>
+</html>
