--- a/scheduler.html
+++ b/scheduler.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
   </head>
   <body>
-<img src='https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png?inViewPort=true'>
+inviewport image here: <img src='https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png?inViewPort=true'>
 <div style="height: 99999px; width: 100%" id="view_div"></div>
     <script type="text/javascript">
       function getImage(){
