--- a/scheduler.html
+++ b/scheduler.html
@@ -8,7 +8,7 @@
   <body>
 inviewport image here: <img src='https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png?inViewPort=true'>
 <div style="height: 9999px; width: 100%" id="view_div"></div>
-outofviewport image here: <img src='https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png?inViewPort=true'>
+outofviewport image here: <img src='https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png?inViewPort=false'>
   </body>
   </html>
   </body>
