--- a/scheduler.html
+++ b/scheduler.html
@@ -6,6 +6,8 @@
   </head>
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <body>
+    This page contains a stylesheet which is required to complete layout, an inviewport image, and out of viewport image, and an asynchronously loaded javascript file.
+    <br>
 inviewport image here: <img src='https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png?inViewPort=true'>
 <div style="height: 9999px; width: 100%" id="view_div"></div>
 outofviewport image here: <img src='https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png?inViewPort=false'>
