--- a/scheduler.html
+++ b/scheduler.html
@@ -4,7 +4,7 @@
     <title>Test page for scheduler changes</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
   </head>
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script async src="javascripts/main.js"></script>
   <body>
     This page contains a stylesheet which is required to complete layout, an inviewport image, and out of viewport image, and an asynchronously loaded javascript file.
     <br>
