--- a/scheduler.html
+++ b/scheduler.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Test page for scheduler changes</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css">
   </head>
   <script async src="javascripts/main.js"></script>
   <body>
