--- a/scheduler.html
+++ b/scheduler.html
@@ -2,16 +2,22 @@
 <html>
   <head>
     <title>Test page for scheduler changes</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css?file=1">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css?file=2">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css?file=3">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css?file=4">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css?file=5">
   </head>
-  <script async src="javascripts/main.js"></script>
   <body>
     This page contains a stylesheet which is required to complete layout, an inviewport image, and out of viewport image, and an asynchronously loaded javascript file.
     <br>
 inviewport image here: <img src='https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png?inViewPort=true'>
 <div style="height: 9999px; width: 100%" id="view_div"></div>
 outofviewport image here: <img src='https://raw.githubusercontent.com/bizzbyster/bizzbyster.github.io/master/images/zip-icon.png?inViewPort=false'>
-  </body>
-  </html>
+<script async src="javascripts/main.js?file=1"></script>
+<script async src="javascripts/main.js?file=2"></script>
+<script async src="javascripts/main.js?file=3"></script>
+<script async src="javascripts/main.js?file=4"></script>
+<script async src="javascripts/main.js?file=5"></script>
   </body>
 </html>
