--- a/scheduler.html
+++ b/scheduler.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css?file=3">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css?file=4">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css?file=5">
+    <script src="javascripts/main.js?occursBeforeBody=true"></script>
   </head>
   <body>
     This page contains a stylesheet which is required to complete layout, an inviewport image, and out of viewport image, and an asynchronously loaded javascript file.
