--- a/prerender_wikipedia.html
+++ b/prerender_wikipedia.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="prerender" href="https://www.wikipedia.org/">
+<link rel="prerender" href="https://www.wikipedia.org/?thiswasprererendered=true">
 </head>
 <body>
 This page will just do a prerender of https://www.wikipedia.org/
