--- a/latency_test.html
+++ b/latency_test.html
@@ -18,31 +18,33 @@
       }
       sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/6K.png?req=1rnd=" +
-      Math.random() + "'>");'
+      Math.random() + "'>");
       sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/6K.png?req=2rnd=" +
-      Math.random() + "'>");'
+      Math.random() + "'>");
       sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/6K.png?req=3rnd=" +
-      Math.random() + "'>");'
+      Math.random() + "'>");
       sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/6K.png?req=4rnd=" +
       Math.random() + "'>");'sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/6K.png?req=5rnd=" +
-      Math.random() + "'>");'
+      Math.random() + "'>");
       sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/6K.png?req=6rnd=" +
-      Math.random() + "'>");'sleep(2000);
+      Math.random() + "'>");
+      sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/6K.png?req=7rnd=" +
-      Math.random() + "'>");'
+      Math.random() + "'>");
       sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/6K.png?req=8rnd=" +
-      Math.random() + "'>");'sleep(2000);
+      Math.random() + "'>");
+      sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/6K.png?req=9rnd=" +
-      Math.random() + "'>");'
+      Math.random() + "'>");
       sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/6K.png?req=10rnd=" +
-      Math.random() + "'>");'
+      Math.random() + "'>");
       </script>
     
   </body>
