--- a/latency_test.html
+++ b/latency_test.html
@@ -27,7 +27,8 @@
       Math.random() + "'>");
       sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/6K.png?req=4rnd=" +
-      Math.random() + "'>");'sleep(2000);
+      Math.random() + "'>");
+      sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/6K.png?req=5rnd=" +
       Math.random() + "'>");
       sleep(2000);
