--- a/latency_test.html
+++ b/latency_test.html
@@ -19,34 +19,18 @@
       sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=1rnd=" +
       Math.random() + "'>");
+    </script><script>
       sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=2rnd=" +
       Math.random() + "'>");
+    </script><script>
       sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=3rnd=" +
       Math.random() + "'>");
+    </script><script>
       sleep(2000);
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=4rnd=" +
       Math.random() + "'>");
-      sleep(2000);
-      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=5rnd=" +
-      Math.random() + "'>");
-      sleep(2000);
-      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=6rnd=" +
-      Math.random() + "'>");
-      sleep(2000);
-      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=7rnd=" +
-      Math.random() + "'>");
-      sleep(2000);
-      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=8rnd=" +
-      Math.random() + "'>");
-      sleep(2000);
-      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=9rnd=" +
-      Math.random() + "'>");
-      sleep(2000);
-      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=10rnd=" +
-      Math.random() + "'>");
-      </script>
-    
+    </script>
   </body>
 </html>
