--- a/latency_test.html
+++ b/latency_test.html
@@ -32,5 +32,33 @@
       document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=4rnd=" +
       Math.random() + "'>");
     </script>
+    <script>
+      sleep(2000);
+      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=5rnd=" +
+      Math.random() + "'>");
+    </script><script>
+      sleep(2000);
+      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=6rnd=" +
+      Math.random() + "'>");
+    </script><script>
+      sleep(2000);
+      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=7rnd=" +
+      Math.random() + "'>");
+    </script>
+    <script>
+      sleep(2000);
+      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=8rnd=" +
+      Math.random() + "'>");
+    </script>
+    <script>
+      sleep(2000);
+      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=9rnd=" +
+      Math.random() + "'>");
+    </script>
+    <script>
+      sleep(2000);
+      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=10rnd=" +
+      Math.random() + "'>");
+    </script>
   </body>
 </html>
