--- a/latency_test.html
+++ b/latency_test.html
@@ -21,7 +21,7 @@
       Math.random() + "'>");
     </script><script>
       sleep(2000);
-      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=2rnd=" +
+      document.write("<img src='y_200_a.png?req=2rnd=" +
       Math.random() + "'>");
     </script><script>
       sleep(2000);
@@ -29,7 +29,7 @@
       Math.random() + "'>");
     </script><script>
       sleep(2000);
-      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=4rnd=" +
+      document.write("<img src='y_200_a.png?req=4rnd=" +
       Math.random() + "'>");
     </script>
     <script>
@@ -38,7 +38,7 @@
       Math.random() + "'>");
     </script><script>
       sleep(2000);
-      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=6rnd=" +
+      document.write("<img src='y_200_a.png?req=6rnd=" +
       Math.random() + "'>");
     </script><script>
       sleep(2000);
@@ -47,7 +47,7 @@
     </script>
     <script>
       sleep(2000);
-      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=8rnd=" +
+      document.write("<img src='y_200_a.png?req=8rnd=" +
       Math.random() + "'>");
     </script>
     <script>
@@ -57,7 +57,7 @@
     </script>
     <script>
       sleep(2000);
-      document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=10rnd=" +
+      document.write("<img src='y_200_a.png?req=10rnd=" +
       Math.random() + "'>");
     </script>
   </body>
