--- a/dyn_latency_test.html
+++ b/dyn_latency_test.html
@@ -16,9 +16,67 @@
           }
         }
       }
-      for (i=0; i < 10 ; i++) {
-        document.write("<script>sleep(2000);</script><img src='y_200_a.png?req=2&rnd=" + 
-        Math.random() + "'><img src='y_200_a.png?req=2rnd=" + 
+      sleep(2000);
+      for (i = 0; i < 5; i++) {
+        document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=1rnd=" +
+        Math.random() + "'>");
+      }
+    </script><script>
+      sleep(2000);
+      for (i = 0; i < 5; i++) {
+        document.write("<img src='y_200_a.png?req=2rnd=" +
+        Math.random() + "'>");
+      {
+    </script><script>
+      sleep(2000);
+      for (i = 0; i < 5; i++) {
+        document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=3rnd=" +
+        Math.random() + "'>");
+      }
+    </script><script>
+      sleep(2000);
+      for (i = 0; i < 5; i++) {
+        document.write("<img src='y_200_a.png?req=4rnd=" +
+        Math.random() + "'>");
+      }
+    </script>
+    <script>
+      sleep(2000);
+      for (i = 0; i < 5; i++) {
+        document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=5rnd=" +
+        Math.random() + "'>");
+      }
+    </script><script>
+      sleep(2000);
+      for (i = 0; i < 5; i++) {
+        document.write("<img src='y_200_a.png?req=6rnd=" +
+        Math.random() + "'>");
+      }
+    </script><script>
+      sleep(2000);
+      for (i = 0; i < 5; i++) {
+        document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=7rnd=" +
+        Math.random() + "'>");
+      }
+    </script>
+    <script>
+      sleep(2000);
+      for (i = 0; i < 5; i++) {
+        document.write("<img src='y_200_a.png?req=8rnd=" +
+        Math.random() + "'>");
+      }
+    </script>
+    <script>
+      sleep(2000);
+      for (i = 0; i < 5; i++) {
+        document.write("<img src='https://s.yimg.com/dh/ap/default/130909/y_200_a.png?req=9rnd=" +
+        Math.random() + "'>");
+      }
+    </script>
+    <script>
+      sleep(2000);
+      for (i = 0; i < 5; i++) {
+        document.write("<img src='y_200_a.png?req=10rnd=" +
         Math.random() + "'>");
       }
     </script>
