--- a/viewport_issue.html
+++ b/viewport_issue.html
@@ -50,6 +50,6 @@
         document.write("<img src='http://l.yimg.com/av/curveball/ads/pr/RESIZE/82x82/643a0ed39be1c49502e9ac5a0b519dc7.jpeg?req=1rnd=" + Math.random() + "'>");
       }
 </script>
-    <img src ="blueangels.jpg">
+    <img src ="http://l.yimg.com/av/curveball/ads/pr/RESIZE/82x82/643a0ed39be1c49502e9ac5a0b519dc7.jpeg?static=true">
   </body>
 </html>
