--- a/likelyneededbypages/critical.html
+++ b/likelyneededbypages/critical.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div id="inviewport-images">
-            <img src="sparrow.png?inviewport"></img>
+        // dynamically generated inviewport image will go here
         </div>
         <div id="divider"></div>
         <div id="not-inviewport-images">
