--- a/likelyneededbypages/critical.html
+++ b/likelyneededbypages/critical.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="inviewportcreator.js"></script>
-        <script src="doesNothing.js"></script>
+        <script src="doesNothing.js" defer></script>
         <link rel="stylesheet" type="text/css" href="divider.css" />
     </head>
     <body onload=loadOutOfViewportImageLate()>
