--- a/likelyneededbypages/critical.html
+++ b/likelyneededbypages/critical.html
@@ -10,7 +10,7 @@
         <script src="doesNothing.js" defer></script>
         <link rel="stylesheet" type="text/css" href="divider.css" />
     </head>
-    <body onload=loadOutOfViewportImageLate()>
+    <body onload=loadStuffLate()>
         <div id="inviewport-images">
         <!-- dynamically generated inviewport image will go here -->
         </div>
