--- a/likelyneededbypages/critical.html
+++ b/likelyneededbypages/critical.html
@@ -46,7 +46,7 @@
         }
         </script>
 
-        <-- Do nothing script requested in the head, eventually we will not prefetch it-->
+        <!-- Do nothing script requested in the head, eventually we will not prefetch it-->
         <script src="doesNothing.js"></script>
     </head>
     <body onload=loadStuffLate()>
